2004-11-17  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-output-coding-system): Use `utf-8' if Emacs has
	internal utf-8 only.
	(w3m-input-coding-system): Revert last change.
	(w3m-halfdump-command-arguments): Bind `fix_width_conv' and
	`use_jisx0201' when w3m-m17n.

2004-11-16  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-input-coding-system): Use `utf-8' if Emacs has
	internal utf-8, it has no Mule-UCS and w3m-type is `w3m-m17n'.

2004-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Break
	continuous lines in editorials.

	* w3m-form.el (w3m-char-to-int, w3m-string-to-char-list,
	w3m-int-to-char): Silence byte-compiler.
	* w3m-ccl.el (charset-id): Ditto.

	* w3m-tabmenu.el (w3m-tab-menubar-update): Don't let iswitchb
	manage the w3m tab menubar.

2004-11-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-hns.el (shimbun-hns-article): Support tdiary-hns-theme.

2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-break-long-japanese-lines): New function.
	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Use it.
	* shimbun/sb-wired.el (shimbun-make-contents): Use it.

2004-10-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-check-refresh-attribute): Support own page reload.
	(w3m-goto-url-with-timer): Ditto.

2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_ADD_LOAD_PATH): Clarify the error message.

2004-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (call-process-region): Add an advice in order to fix
	an XEmacs 21.5.18 bug.
	* w3mhack.el (call-process-region): Ditto.

	* shimbun/sb-bbc.el (shimbun-rss-build-message-id): Prevent
	fetching of headers stopping with extra articles.

2004-10-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-check-refresh-attribute): Fix to analyze the URL.

2004-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
